# meldr

./: CLAUDE.md  Cargo.toml  Dockerfile.test  LICENSE  README.md  ROADMAP.md  run-docker-tests.sh
.claude/: settings.local.json
.claude/skills/codebase-flow/: SKILL.md
.claude/skills/finish-up/: SKILL.md
.claude/skills/meldr-ops/: SKILL.md
.claude/skills/meldr-workflow/: SKILL.md
.claude/skills/verify-build/: SKILL.md
.github/workflows/: ci.yml
docs/: codebase-flow.html  codebase-flow.json  gap-analysis.md
docs/superpowers/plans/: 2026-03-30-p1-roadmap-v2.md
docs/superpowers/specs/: 2026-03-29-meldr-roadmap-v2-design.md
src/: error.rs  main.rs  trace.rs
src/assets/: meldr-agent-notify.sh
src/cli/: claude_hook.rs  config_cmd.rs  create.rs  doctor.rs  exec.rs  init.rs  install_hooks.rs  mod.rs  package.rs  pr.rs  prompt_check.rs  status.rs  sync.rs  worktree.rs
src/core/: agent_signal.rs  claude_prune.rs  config.rs  doctor.rs  filter.rs  fs_util.rs  hooks.rs  install_hooks.rs  leftover_archive.rs  mod.rs  package.rs  state.rs  sync_history.rs  workspace.rs  worktree.rs
src/core/claude_hooks/: classify.rs  mod.rs  registry.rs  resolver.rs  sidecar.rs
src/git/: mod.rs
src/tmux/: mod.rs
tests/: claude_hooks_docker.rs  docker_integration.rs  filter_integration_test.rs  groups_test.rs  hooks_test.rs  integration.rs  leader_integration_test.rs  pr_test.rs  status_test.rs
