[package]
name = "meldr"
version = "0.1.0"
edition = "2024"
description = "Workspace management tool for multi-repo projects with git worktrees and tmux integration"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
rayon = "1"
thiserror = "2"
console = "0.15"
dirs = "6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
