[package]
name = "meldr"
version = "0.1.0"
edition = "2024"
description = "Workspace management tool for multi-repo projects with git worktrees and tmux integration"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
rayon = "1"
thiserror = "2"
console = "0.15"
dialoguer = { version = "0.11", default-features = false }
dirs = "6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[features]
# Enable integration tests that require Docker + network-cloned GitHub repos.
# These live in tests/docker_integration.rs and are driven by ./run-docker-tests.sh.
# Off by default so `cargo test` on a bare host doesn't try to run them.
docker-tests = []
